tests/snapshots/render_snapshots__target_error__human__nocolor.snap
---
source: tests/render_snapshots.rs
expression: "render_human(r, &t, true)"
---
⚠ TARGET ERROR  read /srv/data/missing.txt   /srv/data/missing.txt does not exist (ENOENT)

  /            ✓ x
  srv          ✓ x
  data         ✓ x
  missing.txt  ✗ r  no such file or directory

target does not exist: ENOENT
  ls -ld  stat: cannot stat '/srv/data/missing.txt': No such file or directory
